--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDybfixTawiThEM3E2ziK2gFJP_zCSS1Vs&libraries=places&callback=initMap"></script>
+    <script defer type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDybfixTawiThEM3E2ziK2gFJP_zCSS1Vs&libraries=places">
+    </script>
     <script defer src="script.js"></script>
     <title>Weather App</title>
 </head>
