Edited workarounds with API. Fix problem in script.js

--- a/public/index.html
+++ b/public/index.html
@@ -20,21 +20,21 @@
         </div>
         <div class="content">
             <div class="general-information">
-                <div class="status">Enter A Location</div>
-                <div class="location">To Find the Weather</div>
+                <div class="status" data-status>Enter A Location</div>
+                <div class="location" data-location>To Find the Weather</div>
             </div>
             <div class="detail-section">
                 <div class="detail">
                     <div class="title">Wind</div>
-                    <div class="value">TBD</div>
+                    <div class="value" data-wind>TBD</div>
                 </div>
                 <div class="detail">
                     <div class="title">Temperature</div>
-                    <div class="value">TBD</div>
+                    <div class="value" data-temperature>TBD</div>
                 </div>
                 <div class="detail">
-                    <div class="title">Precipitation</div>
-                    <div class="value">TBD</div>
+                    <div class="title">Humidity</div>
+                    <div class="value" data-humidity>TBD</div>
                 </div>
             </div>
             <div class="city-search-container">
