Fixed fetch errors and updated weather, works smoothly. Do CSS.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script defer type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDybfixTawiThEM3E2ziK2gFJP_zCSS1Vs&libraries=places">
     </script>
-    <script defer src="script.js"></script>
+    <script defer src="script.mjs"></script>
     <title>Weather App</title>
 </head>
 <body>
