--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="header">
             <div class="icon-container">
-                <canvas id="icon" width="100" height="100"></canvas>
+                <image class="icon" src="http://openweathermap.org/img/wn/01d@2x.png" alt="Weather icon" width="100" height="100"></image>
             </div>
         </div>
         <div class="content">
@@ -28,7 +28,7 @@
                     <div class="title">Wind</div>
                     <div class="value" data-wind>TBD</div>
                 </div>
-                <div class="detail">
+                <div class="detail bordered">
                     <div class="title">Temperature</div>
                     <div class="value" data-temperature>TBD</div>
                 </div>
