Made files accessbile for netlify

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             </div>
             <div class="detail-section">
                 <div class="detail">
-                    <div class="title">Wind</div>
+                    <div class="title">Wind (MPH)</div>
                     <div class="value" data-wind>TBD</div>
                 </div>
                 <div class="detail bordered">
-                    <div class="title">Temperature</div>
+                    <div class="title">Temperature (F)</div>
                     <div class="value" data-temperature>TBD</div>
                 </div>
                 <div class="detail">
-                    <div class="title">Humidity</div>
+                    <div class="title">Humidity (%)</div>
                     <div class="value" data-humidity>TBD</div>
                 </div>
             </div>
